# tauri-plugin-sql

./: Cargo.toml  build.rs  tsconfig.json
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: transaction_execute.toml
permissions/schemas/: schema.json
src/: plugin.rs
