[package]
name = "tauri-plugin-sql"
version = "2.0.0-beta.1"
description = "Interface with SQL databases."
license = ""
repository = ""
edition = "2021"
links = "tauri-plugin-sql"

[package.metadata.docs.rs]
features = [ "sqlite" ]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.4", features = [ "build" ] }

[dependencies]
serde = "1.0.195"
serde_json = "1.0.110"
tauri = { version = "2.0.0-beta", features = [] }
log = "0.4"
thiserror = "1.0.57"
futures-core = "0.3"
sqlx = { version = "0.7", features = [ "json", "time" ] }
time = "0.3"
tokio = { version = "1", features = [ "sync" ] }

[features]
default = ["mysql"]
sqlite = [ "sqlx/sqlite", "sqlx/runtime-tokio" ]
mysql = [ "sqlx/mysql", "sqlx/runtime-tokio-rustls" ]
postgres = [ "sqlx/postgres", "sqlx/runtime-tokio-rustls" ]
